senpai/tests/cases/error/invalid_cast.sen
fn main():
    let s: Str = "hello"
    let x: I64 = s as I64
